--- a/views/auth/signin.ejs
+++ b/views/auth/signin.ejs
@@ -48,7 +48,7 @@
                     </div>
                 <% } %>
 
-                <form class="space-y-6" action="/auth/signin" method="POST">
+                <form class="space-y-6" action="/session" method="POST">
                     <div>
                         <label for="email" class="block text-sm font-medium text-gray-700">
                             Email address
