--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -23,7 +23,7 @@
             </h2>
             <p class="mt-2 text-center text-sm text-gray-600">
                 Or
-                <a href="/auth/signin" class="font-medium text-indigo-600 hover:text-indigo-500">
+                <a href="/login" class="font-medium text-indigo-600 hover:text-indigo-500">
                     sign in to your existing account
                 </a>
             </p>
